# sqlfluff-sqlc-postgres

./: README.md  setup.cfg
examples/: .sqlfluff
sqlfluff_sqlc_postgres/: __init__.py  templater.py
test/: placeholder_test.py
