[metadata]
name = sqlfluff-sqlc-postgres
version = 0.1.0
description = Lint PostgreSQL files for SQLC
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/danicc097/sqlfluff-sqlc-postgres
author = Daniel Castro
author_email = danicc097@gmail.com
license = MIT License
license_files = LICENSE.md

[options]
packages = find:
python_requires = >=3.6
install_requires =
sqlfluff >=0.8.2
colorama >=0.4.4

[options.packages.find]
include = sqlfluff_sqlc_postgres

[options.entry_points]
sqlfluff = sqlfluff_sqlc_postgres=sqlfluff_sqlc_postgres
